--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
   },
   "homepage": "https://github.com/FruitieX/nodeplayer-plugin-weblistener",
   "dependencies": {
-    "express": "^4.12.3",
+    "express": "^4.12.3"
   }
 }
